--- a/particle_filter/jupyter_particle/ParticleFilter_update.ipynb
+++ b/particle_filter/jupyter_particle/ParticleFilter_update.ipynb
@@ -679,16 +679,15 @@
     "              [0,10,0], [0,10,0], [0,10,0],[0,10,0],\n",
     "              [0,0,-math.radians(90)],\n",
     "              [math.cos(math.pi/3)*10, math.sin(math.pi/3),0],[math.cos(math.pi/3)*10, math.sin(math.pi/3),0],[math.cos(math.pi/3)*10, math.sin(math.pi/3),0],\n",
-    "              [math.cos(math.pi/3)*10, math.sin(math.pi/3),0]\n",
-    "              \n",
-    "              ]"
+    "              [math.cos(math.pi/3)*10, math.sin(math.pi/3),0]]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5) Crie uma função que aplica um deslocamento [delta_x, delta_y, delta_theta] com um desvio padrão [std_x, std_y, std_theta] a todas as partículas"
+    "5) Crie uma função que aplica um deslocamento [delta_x, delta_y, delta_theta] com um desvio padrão [std_x, std_y,\n",
+    "std_theta] a todas as partículas"
    ]
   },
   {
@@ -698,7 +697,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def deslocamente (movimentos, delta, std):\n",
+    "    movs=[]\n",
+    "    for mov in movimentos:\n",
+    "        movN = []\n",
+    "        movN[0] += delta[0] + np.random.randint(0, std[0])\n",
+    "        movN[1] += delta[1] + np.random.randint(0, std[1])\n",
+    "        movN[2] += delta[2] + np.random.randint(0, std[2])\n",
+    "        movs.append(movN)\n",
+    "    return movs"
+   ]
   }
  ],
  "metadata": {
