--- a/particle_filter/jupyter_particle/ParticleFilter_update.ipynb
+++ b/particle_filter/jupyter_particle/ParticleFilter_update.ipynb
@@ -142,6 +142,8 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "from PIL import Image as PilImage\n",
     "\n",
     "\n",
@@ -327,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
