--- a/particle_filter/jupyter_particle/particula_pericles.ipynb
+++ b/particle_filter/jupyter_particle/particula_pericles.ipynb
@@ -6,11 +6,8 @@
    "source": [
     "# Filtro de partículas\n",
     "\n",
-    "\tS = []  #Contem as n partículas. \n",
-    "\n",
-    "\tW = [] # Pesos das partículas\n",
-    "\n",
-    "\tn_part = # Número de partículas"
+    "Daniel Ruhman\n",
+    "Martim Ferreira Jos"
    ]
   },
   {
@@ -181,26 +178,6 @@
    "source": [
     "particulas = gerador_particulas(pose, minx=250, maxx=400, miny=150, maxy=250, var_theta = math.pi/3, n=100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 561,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cheat = Particle(pose[0], pose[1], pose[2])\n",
-    "\n",
-    "# particulas.append(cheat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -620,33 +597,6 @@
    "source": [
     "<img src=\"tentativa.gif\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
